test/errors/expecting_statement.dm
2 + 2

--- Output
Expecting a statement

1| 2 + 2
   ^
---
